@@ -70,6 +70,7 @@ site_info_configuration:
   SIFTS_SUMMARY_DATA_PATH: sifts-summary
   #
   # --------- Configuration for remote and local data access ----
+  # DISCOVERY_MODE: local
   DISCOVERY_MODE: remote
   PDB_REPO_URL: https://ftp.wwpdb.org/pub
   PDB_REPO_FALLBACK_URL: https://ftp.wwpdb.org/pub
@@ -118,24 +119,47 @@ site_info_configuration:
   # ------ ------ ------ ------ ------ ------ ------ -------
   # Make dictionaries point to the new dictionary asset layout  -
   #
-  PDBX_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/mmcif_pdbx_v5_next.dic
-  RCSB_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/dist/rcsb_mmcif_ext.dic
-  RCSB_COMP_MODEL_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/dist/rcsb_mmcif_comp_model_ext.dic
-  IHMDEV_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/ihm-extension.dic
-  FLR_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/flr-extension.dic
-  VRPT_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/vrpt_mmcif_ext.dic
-  VRPT_DICT_MAPPING_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/vrpt_dictmap.json
+  ## FOR TESTING ONLY:
+  PDBX_DICT_LOCATOR: /Users/dennis/rcsb/py-rcsb_exdb_assets/dictionary_files/reference/mmcif_pdbx_v5_next.dic
+  RCSB_DICT_LOCATOR: /Users/dennis/rcsb/py-rcsb_exdb_assets/dictionary_files/dist/rcsb_mmcif_ext.dic
+  RCSB_COMP_MODEL_DICT_LOCATOR: /Users/dennis/rcsb/py-rcsb_exdb_assets/dictionary_files/dist/rcsb_mmcif_comp_model_ext.dic
+  FLR_DICT_LOCATOR: /Users/dennis/rcsb/py-rcsb_exdb_assets/dictionary_files/reference/flr-extension.dic
+  VRPT_DICT_LOCATOR: /Users/dennis/rcsb/py-rcsb_exdb_assets/dictionary_files/reference/vrpt_mmcif_ext.dic
+  VRPT_DICT_MAPPING_LOCATOR: /Users/dennis/rcsb/py-rcsb_exdb_assets/dictionary_files/reference/vrpt_dictmap.json
+  IHMDEV_DICT_LOCATOR: /Users/dennis/rcsb/py-rcsb_exdb_assets/dictionary_files/reference/ihm-extension.dic
+  MA_DICT_LOCATOR: /Users/dennis/rcsb/py-rcsb_exdb_assets/dictionary_files/reference/mmcif_ma.dic
   #
-  MA_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/mmcif_ma.dic
+  ## FOR PRODUCTION:
+  # PDBX_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/mmcif_pdbx_v5_next.dic
+  # RCSB_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/dist/rcsb_mmcif_ext.dic
+  # RCSB_COMP_MODEL_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/dist/rcsb_mmcif_comp_model_ext.dic
+  # FLR_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/flr-extension.dic
+  # VRPT_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/vrpt_mmcif_ext.dic
+  # VRPT_DICT_MAPPING_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/vrpt_dictmap.json
+  # IHMDEV_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/ihm-extension.dic
+  # MA_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/mmcif_ma.dic
+  #
+  ## Previously pointed to 'dictionary_files/reference', but point to authoritative source instead to ensure most recent version is used
+  # IHMDEV_DICT_LOCATOR: https://raw.githubusercontent.com/ihmwg/IHM-dictionary/master/ihm-extension.dic
+  # MA_DICT_LOCATOR: https://raw.githubusercontent.com/ihmwg/MA-dictionary/master/mmcif_ma.dic
+  #
   # ------ ------ ------ ------ ------ ------ ------ ------ ------
   # Added in rcsb.db V0.966 - Data type details and type mapping
   APP_DATA_TYPE_INFO_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/data_type_and_coverage/app_data_type_mapping.cif
-  INSTANCE_DATA_TYPE_INFO_LOCATOR_PATH: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/data_type_and_coverage
+  #
+  # FOR TESTING ONLY:
+  INSTANCE_DATA_TYPE_INFO_LOCATOR_PATH: /Users/dennis/rcsb/py-rcsb_exdb_assets/data_type_and_coverage
+  # FOR PRODUCTION:
+  # INSTANCE_DATA_TYPE_INFO_LOCATOR_PATH: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/data_type_and_coverage
   #
   CONTENT_DEF_HELPER_MODULE: rcsb.db.helpers.ContentDefinitionHelper
   DOCUMENT_DEF_HELPER_MODULE: rcsb.db.helpers.DocumentDefinitionHelper
   CONFIG_APPEND_LOCATOR_PATHS:
-    - https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/config/exdb-config-schema.yml
+    # FOR TESTING ONLY:
+    - /Users/dennis/rcsb/py-rcsb_exdb_assets/config/exdb-config-schema.yml
+    # FOR PRODUCTION:
+    # - https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/config/exdb-config-schema.yml
+  #
   # ------ ------ ------ ------ ------ ------ ------ ------ ------
   #
   # Mock stash configuration to support remote testing in local mode (no stash server urls)
@@ -165,7 +189,8 @@ site_info_remote_configuration:
   #     dev: 128.6.158.254
   # staging: 128.6.159.43
   #
-  MONGO_DB_HOST: 128.6.158.254
+  # MONGO_DB_HOST: 128.6.158.254
+  MONGO_DB_HOST: localhost
   MONGO_DB_PORT: "27017"
   _MONGO_DB_USER_NAME: vknsNHfQ1nyy5w1vsfP4fbOp1iPxD3K5yZmNFsJDqTRl+87zicTLa9lkHG5uReM=
   _MONGO_DB_PASSWORD: wfm/FNyhON/AGaJfLhL5ZA0ObAVU0DZ0sICB2eemS8GFfAOZvo3Y/vXTkjLayViwppj2MQ==
@@ -268,12 +293,14 @@ site_info_remote_configuration:
   PDBX_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/mmcif_pdbx_v5_next.dic
   RCSB_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/dist/rcsb_mmcif_ext.dic
   RCSB_COMP_MODEL_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/dist/rcsb_mmcif_comp_model_ext.dic
-  IHMDEV_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/ihm-extension.dic
   FLR_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/flr-extension.dic
   VRPT_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/vrpt_mmcif_ext.dic
   VRPT_DICT_MAPPING_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/vrpt_dictmap.json
-  #
+  IHMDEV_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/ihm-extension.dic
   MA_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionary_files/reference/mmcif_ma.dic
+  ## Previously pointed to 'dictionary_files/reference', but point to authoritative source instead to ensure most recent version is used
+  # IHMDEV_DICT_LOCATOR: https://raw.githubusercontent.com/ihmwg/IHM-dictionary/master/ihm-extension.dic
+  # MA_DICT_LOCATOR: https://raw.githubusercontent.com/ihmwg/MA-dictionary/master/mmcif_ma.dic
   #
   # Added in rcsb.db V0.966 - Data type details and type mapping
   APP_DATA_TYPE_INFO_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/data_type_and_coverage/app_data_type_mapping.cif
